--- a/.github/workflows/windows-containers.yml
+++ b/.github/workflows/windows-containers.yml
@@ -6,9 +6,6 @@ on:
   pull_request:
     branches: [ master ]
 
-env:
-  BUILDKIT_PROGRESS: plain
-
 jobs:
 
   container-tests:
@@ -24,8 +21,11 @@ jobs:
         with:
           msystem: MINGW64
           update: true
-          install: git mingw-w64-x86_64-toolchain
+          install: git make
       - name: CI-Build
+        env:
+          BUILDKIT_PROGRESS: plain
+          DOCKER_CLI_EXPERIMENTAL: enabled
         run: |
           echo 'Running in MSYS2!'
-          ./github/workflows/test_containers.sh
+          ./.github/workflows/test_containers.sh
