--- a/.github/workflows/windows-containers.yml
+++ b/.github/workflows/windows-containers.yml
@@ -20,6 +20,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set up Docker buildx
         run: |
+          docker pull minio/minio
           ls C:\ProgramData\Docker\cli-plugins
           Restart-Service docker
       - uses: msys2/setup-msys2@v2
