--- a/.github/workflows/macos-tests.yml
+++ b/.github/workflows/macos-tests.yml
@@ -17,13 +17,16 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      - name: Install docker
+      - name: Install Docker
         run: |
           mkdir -p ~/.docker/machine/cache
           curl -Lo ~/.docker/machine/cache/boot2docker.iso https://github.com/boot2docker/boot2docker/releases/download/v19.03.12/boot2docker.iso
           brew install make docker docker-machine
           docker-machine create --driver virtualbox default
           docker-machine env default
+
+      - uses: actions/checkout@v2
+
       - name: Run container tests
         run: |
           eval "$(docker-machine env default)"
@@ -44,14 +47,17 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      - name: Install docker
+      - name: Install Docker
         run: |
           mkdir -p ~/.docker/machine/cache
           curl -Lo ~/.docker/machine/cache/boot2docker.iso https://github.com/boot2docker/boot2docker/releases/download/v19.03.12/boot2docker.iso
           brew install make docker docker-machine
           docker-machine create --driver virtualbox default
           docker-machine env default
-      - name: Run container tests
+
+      - uses: actions/checkout@v2
+
+      - name: Run DDEV tests
         run: |
           eval "$(docker-machine env default)"
           docker version
