--- a/.github/workflows/macos-tests.yml
+++ b/.github/workflows/macos-tests.yml
@@ -22,6 +22,7 @@ jobs:
           mkdir -p ~/.docker/machine/cache
           curl -Lo ~/.docker/machine/cache/boot2docker.iso https://github.com/boot2docker/boot2docker/releases/download/v19.03.12/boot2docker.iso
           brew install make docker docker-machine
+          ls ~/.docker/cli-plugins
           docker-machine create --driver virtualbox default
           docker-machine env default
 
