--- a/.github/workflows/macos-tests.yml
+++ b/.github/workflows/macos-tests.yml
@@ -22,7 +22,11 @@ jobs:
           mkdir -p ~/.docker/machine/cache
           curl -Lo ~/.docker/machine/cache/boot2docker.iso https://github.com/boot2docker/boot2docker/releases/download/v19.03.12/boot2docker.iso
           brew install make docker docker-machine
+          mkdir ~/.docker/cli-plugins
+          curl -sSL https://github.com/docker/buildx/releases/download/v0.4.2/buildx-v0.4.2.darwin-amd64 -o ~/.docker/cli-plugins/docker-buildx
+          chmod a+x ~/.docker/cli-plugins/docker-buildx
           ls ~/.docker/cli-plugins
+          docker buildx --help
           docker-machine create --driver virtualbox default
           docker-machine env default
 
