--- a/.github/workflows/macos-tests.yml
+++ b/.github/workflows/macos-tests.yml
@@ -19,13 +19,11 @@ jobs:
     steps:
       - name: Install Docker
         run: |
-          mkdir -p ~/.docker/machine/cache
-          curl -Lo ~/.docker/machine/cache/boot2docker.iso https://github.com/boot2docker/boot2docker/releases/download/v19.03.12/boot2docker.iso
-          brew install make docker docker-machine
+          brew install make docker docker-machine mysql-client
+          brew cask install virtualbox
           mkdir ~/.docker/cli-plugins
           curl -sSL https://github.com/docker/buildx/releases/download/v0.4.2/buildx-v0.4.2.darwin-amd64 -o ~/.docker/cli-plugins/docker-buildx
           chmod a+x ~/.docker/cli-plugins/docker-buildx
-          ls ~/.docker/cli-plugins
           docker buildx version
           docker-machine create --driver virtualbox default
           docker-machine env default
@@ -54,13 +52,11 @@ jobs:
     steps:
       - name: Install Docker
         run: |
-          mkdir -p ~/.docker/machine/cache
-          curl -Lo ~/.docker/machine/cache/boot2docker.iso https://github.com/boot2docker/boot2docker/releases/download/v19.03.12/boot2docker.iso
-          brew install make docker docker-machine
+          brew install make docker docker-machine mysql-client
+          brew cask install virtualbox
           mkdir ~/.docker/cli-plugins
           curl -sSL https://github.com/docker/buildx/releases/download/v0.4.2/buildx-v0.4.2.darwin-amd64 -o ~/.docker/cli-plugins/docker-buildx
           chmod a+x ~/.docker/cli-plugins/docker-buildx
-          ls ~/.docker/cli-plugins
           docker buildx version
           docker-machine create --driver virtualbox default
           docker-machine env default
