--- a/.github/workflows/macos-tests.yml
+++ b/.github/workflows/macos-tests.yml
@@ -14,12 +14,13 @@ jobs:
 
   container-tests:
     name: Container tests
-    runs-on: macos-latest
+    runs-on: macos-11.0
 
     steps:
       - name: Install Docker
         run: |
-          brew install make docker docker-machine mysql-client
+          brew install make docker docker-machine
+          brew cask install virtualbox
           mkdir ~/.docker/cli-plugins
           curl -sSL https://github.com/docker/buildx/releases/download/v0.4.2/buildx-v0.4.2.darwin-amd64 -o ~/.docker/cli-plugins/docker-buildx
           chmod a+x ~/.docker/cli-plugins/docker-buildx
@@ -46,12 +47,13 @@ jobs:
 
   ddev-tests:
     name: DDEV tests
-    runs-on: macos-latest
+    runs-on: macos-11.0
 
     steps:
       - name: Install Docker
         run: |
-          brew install make docker docker-machine mysql-client
+          brew install make docker docker-machine
+          brew cask install virtualbox
           mkdir ~/.docker/cli-plugins
           curl -sSL https://github.com/docker/buildx/releases/download/v0.4.2/buildx-v0.4.2.darwin-amd64 -o ~/.docker/cli-plugins/docker-buildx
           chmod a+x ~/.docker/cli-plugins/docker-buildx
