Back to macos-latest

--- a/.github/workflows/macos-tests.yml
+++ b/.github/workflows/macos-tests.yml
@@ -14,14 +14,13 @@ jobs:
 
   container-tests:
     name: Container tests
-    runs-on: macos-11.0
+    runs-on: macos-latest
 
     steps:
       - name: Install Docker
         run: |
           mkdir ~/.docker
           brew install make docker docker-machine
-          brew cask install virtualbox
           mkdir ~/.docker/cli-plugins
           curl -sSL https://github.com/docker/buildx/releases/download/v0.4.2/buildx-v0.4.2.darwin-amd64 -o ~/.docker/cli-plugins/docker-buildx
           chmod a+x ~/.docker/cli-plugins/docker-buildx
@@ -48,14 +47,13 @@ jobs:
 
   ddev-tests:
     name: DDEV tests
-    runs-on: macos-11.0
+    runs-on: macos-latest
 
     steps:
       - name: Install Docker
         run: |
           mkdir ~/.docker
           brew install make docker docker-machine
-          brew cask install virtualbox
           mkdir ~/.docker/cli-plugins
           curl -sSL https://github.com/docker/buildx/releases/download/v0.4.2/buildx-v0.4.2.darwin-amd64 -o ~/.docker/cli-plugins/docker-buildx
           chmod a+x ~/.docker/cli-plugins/docker-buildx
